feat: add detail to document_loader.ipnb

--- a/docs/document_loader.ipynb
+++ b/docs/document_loader.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -55,7 +55,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setup gcloud and database"
+    "### Setup Cloud SQL MySQL database and configure IAM user access to database"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setup Cloud SQL MySQL database: https://cloud.google.com/sql/docs/mysql/create-instance\n",
+    "\n",
+    "Login datebase using IAM database authentication: https://cloud.google.com/sql/docs/mysql/iam-logins\n",
+    "\n",
+    "After confirmed access to database in the runtime environment of this notebook, filling the following values before running the example scripts.\n",
+    "\n"
    ]
   },
   {
@@ -64,78 +76,20 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;33mWARNING:\u001b[0m Your active project does not match the quota project in your local Application Default Credentials file. This might result in unexpected quota issues.\n",
-      "\n",
-      "To update your Application Default Credentials quota project, use the `gcloud auth application-default set-quota-project` command.\n",
-      "Updated property [core/project].\n",
-      "Found existing MySQL Cloud SQL Instance!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#@markdown Please fill in the value below with your GCP project ID and then run the cell.\n",
     "\n",
     "# Please fill in these values.\n",
-    "project_id = \"langchain-cloud-sql-testing\" #@param {type:\"string\"}\n",
-    "\n",
-    "# Quick input validations.\n",
-    "assert project_id, \"⚠️ Please provide a Google Cloud project ID\"\n",
-    "\n",
-    "# Configure gcloud.\n",
-    "!gcloud config set project {project_id}\n",
+    "project_id = \"test-project\" #@param {type:\"string\"}\n",
     "\n",
     "#@markdown Please fill in the both the Google Cloud region and name of your Cloud SQL instance. Once filled in, run the cell.\n",
     "region = \"us-central1\" #@param {type:\"string\"}\n",
     "instance_id = \"test-instance\" #@param {type:\"string\"}\n",
     "db_name = \"test\" #@param {type:\"string\"}\n",
     "\n",
-    "# Quick input validations.\n",
-    "assert region, \"⚠️ Please provide a Google Cloud region\"\n",
-    "assert instance_id, \"⚠️ Please provide the name of your instance\"\n",
-    "\n",
-    "# check if Cloud SQL instance exists in the provided region\n",
-    "database_version = !gcloud sql instances describe {instance_id} --format=\"value(databaseVersion)\"\n",
-    "if database_version[0].startswith(\"MYSQL\"):\n",
-    "  print(\"Found existing MySQL Cloud SQL Instance!\")\n",
-    "else:\n",
-    "  print(\"Creating new Cloud SQL instance...\")\n",
-    "  password = input(\"Please provide a password to be used for 'postgres' database user: \")\n",
-    "  !gcloud sql instances create {instance_name} --database-version=MYSQL_5_7 \\\n",
-    "    --region={region} --cpu=1 --memory=4GB --root-password={password} \\\n",
-    "    --database-flags=cloudsql.iam_authentication=On\n",
-    "  !gcloud sql databases create {database_name} --instance={instance_name}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Register gcloud account as IAM user of MySQL database"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# grant Cloud SQL Client role to authenticated user\n",
-    "current_user = !gcloud auth list --filter=status:ACTIVE --format=\"value(account)\"\n",
-    "\n",
-    "!gcloud projects add-iam-policy-binding {project_id} \\\n",
-    "  --member=user:{current_user[0]} \\\n",
-    "  --role=\"roles/cloudsql.client\"\n",
-    "\n",
-    "# Add current logged in IAM user to database\n",
-    "!gcloud sql users create {current_user[0]} --instance={instance_name} --type=cloud_iam_user\n",
-    "\n",
-    "# Login as root to grants user permission to database\n",
-    "# !mysql -h 127.0.0.1"
+    "#@markdown Please specify a table name for demo purpose.\n",
+    "table_name = \"test-default\" #@param {type:\"string\"}"
    ]
   },
   {
@@ -153,25 +107,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a table of default schema via `MySQLEngine.init_document_table(<table_name>)`. Table Columns:\n",
+    "- page_content (type: text)\n",
+    "- langchain_metadata (type: JSON)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "engine = MySQLEngine.from_instance(\n",
     "    project_id=project_id, region=region, instance=instance_id, database=db_name\n",
     ")\n",
-    "# Create default table\n",
-    "table_name = \"test-default\" #@param {type:\"string\"}\n",
     "with engine.connect() as conn:\n",
     "    conn.execute(sqlalchemy.text(f\"DROP TABLE IF EXISTS `{table_name}`\"))\n",
     "    conn.commit()\n",
-    "engine.init_document_table(table_name)"
+    "engine.init_document_table(table_name)\n",
+    "with engine.connect() as conn:\n",
+    "    result = conn.execute(sqlalchemy.text(f\"describe `{table_name}`;\"))\n",
+    "    print(result.fetchall())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save langchain documents with `MySQLDocumentSaver.add_documents(<documents>)`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -204,7 +175,7 @@
     "with engine.connect() as conn:\n",
     "    result = conn.execute(sqlalchemy.text(f\"select * from `{table_name}`;\"))\n",
     "    print(result.keys())\n",
-    "    print( result.fetchall())"
+    "    print(result.fetchall())"
    ]
   },
   {
@@ -215,15 +186,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load langchain document with `MySQLLoader.load()` or `MySQLLoader.lazy_load()`. `lazy_load` returns a generator that only queries database during the iteration."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "loader = MySQLLoader(engine=engine, table_name=table_name)\n",
-    "docs = loader.load()\n",
+    "docs = loader.lazy_load()\n",
     "for doc in docs:\n",
-    "    print(\"Loaded documents:\", doc)\n"
+    "    print(\"Loaded documents:\", doc)"
    ]
   },
   {
@@ -231,6 +209,13 @@
    "metadata": {},
    "source": [
     "### Load documents via query"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other than loading documents from a table, we can also choose to load documents from a view generated from a SQL query. For example:"
    ]
   },
   {
@@ -248,7 +233,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The view generated from SQL query can have different schema than default table. In such cases, the behavior of MySQLLoader is the same as loading from table with non-default schema. Please refer to section [Load documents with customized document page content & metadata](#Load-documents-with-customized-document-page-content-&-metadata)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Delete documents in default table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Delete a list of langchain documents from MySQL table with `MySQLDocumentSaver.delete(<documents>)`.\n",
+    "\n",
+    "For table with default schema (page_content, langchain_metadata), the deletion criteria is:\n",
+    "\n",
+    "A `row` should be deleted if there exists a `document` in the list, such that\n",
+    "- `document.page_content` equals `row[page_content]`\n",
+    "- `document.metadata` equals `row[langchain_metadata]`"
    ]
   },
   {
@@ -279,6 +284,13 @@
    "metadata": {},
    "source": [
     "### Load documents with customized document page content & metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we prepare an example table with non-default schema, and populate it with some arbitary data."
    ]
   },
   {
@@ -319,6 +331,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we still load langchain document with default option of `MySQLLoader` from this example table, the page_content of loaded documents will be the first column of the table, and metadata will be conists of key-value pairs of all the other columns."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -329,6 +348,15 @@
     "    table_name=table_name,\n",
     ")\n",
     "print(loader.load())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can specify the content and metadata we want to load by setting the `content_columns` and `metadata_columns` when initializing the `MySQLLoader`.\n",
+    "\n",
+    "For example here, the values of columns in `content_columns` will be joined together into a space-separated string, as `page_content` of loaded documents, and 'metadata' of loaded documents will only contain key-value pairs of columns specified in `metadata_columns`."
    ]
   },
   {
@@ -356,6 +384,19 @@
    "metadata": {},
    "source": [
     "### Save document into table with customized metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to save langchain document into table with customized metadata fields. We need first create such a table via `MySQLEngine.init_document_table()`, and specify the list of `metadata_columns` we want it to have. In this example, the created table will have table columns:\n",
+    "- page_content (type: text)\n",
+    "- fruit_name (type text)\n",
+    "- organic (type tinyint(1))\n",
+    "- langchain_metadata (type: JSON)\n",
+    "\n",
+    "`store_metadata` indicate if we want to store metadata fields other than the ones specified in `metadata_columns`, those extra metadata will be stored in `langchain_metadata` column. In case of `store_metadata=False`, `langchain_metadata` will not be created."
    ]
   },
   {
@@ -388,6 +429,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save documents with `MySQLDocumentSaver.add_documents(<documents>)`. As you can see in this example, \n",
+    "- `document.page_content` will be saved into `page_content` column.\n",
+    "- `document.metadata.fruit_name` will be saved into `fruit_name` column.\n",
+    "- `document.metadata.organic` will be saved into `organic` column.\n",
+    "- `document.metadata.fruit_id` will be saved into `langchain_metadata` column in JSON format."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -400,7 +452,6 @@
     "        ),\n",
     "    ]\n",
     "saver = MySQLDocumentSaver(engine=engine, table_name=table_name)\n",
-    "\n",
     "saver.add_documents(test_docs)\n",
     "with engine.connect() as conn:\n",
     "    result = conn.execute(sqlalchemy.text(f\"select * from `{table_name}`;\"))\n",
@@ -413,6 +464,20 @@
    "metadata": {},
    "source": [
     "### Delete documents in table with customized metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also delete documents from table with customized metadata columns via `MySQLDocumentSaver.delete(<documents>)`. The deletion criteria is:\n",
+    "\n",
+    "A `row` should be deleted if there exists a `document` in the list, such that\n",
+    "- `document.page_content` equals `row[page_content]`\n",
+    "- For every metadata field `k` in `document.metadata`\n",
+    "    - `document.metadata[k]` equals `row[k]` or `document.metadata[k]` equals `row[langchain_metadata][k]`\n",
+    "- There no extra metadata field presents in `row` but not in `document.metadata`.\n",
+    "\n"
    ]
   },
   {
