chore: minor refine

--- a/docs/document_loader.ipynb
+++ b/docs/document_loader.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "Login datebase using IAM database authentication: https://cloud.google.com/sql/docs/mysql/iam-logins\n",
     "\n",
-    "After confirmed access to database in the runtime environment of this notebook, filling the following values before running the example scripts.\n",
+    "After confirmed access to database in the runtime environment of this notebook, filling the following values and run the cell before running the following example scripts.\n",
     "\n"
    ]
   },
@@ -83,7 +83,7 @@
     "# Please fill in these values.\n",
     "project_id = \"test-project\" #@param {type:\"string\"}\n",
     "\n",
-    "#@markdown Please fill in the both the Google Cloud region and name of your Cloud SQL instance. Once filled in, run the cell.\n",
+    "#@markdown Please fill in the both the Google Cloud region and name of your Cloud SQL instance.\n",
     "region = \"us-central1\" #@param {type:\"string\"}\n",
     "instance_id = \"test-instance\" #@param {type:\"string\"}\n",
     "db_name = \"test\" #@param {type:\"string\"}\n",
@@ -224,7 +224,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loader = MySQLLoader(engine=engine, query=f\"select * from `{table_name}` where JSON_EXTRACT(langchain_metadata, '$.fruit_id') = 1;\")\n",
+    "loader = MySQLLoader(\n",
+    "    engine=engine,\n",
+    "    query=f\"select * from `{table_name}` where JSON_EXTRACT(langchain_metadata, '$.fruit_id') = 1;\"\n",
+    ")\n",
     "onedoc = loader.load()\n",
     "print(\"Loaded documents:\", onedoc)"
    ]
@@ -446,11 +449,11 @@
    "outputs": [],
    "source": [
     "test_docs = [\n",
-    "        Document(\n",
-    "            page_content=\"Granny Smith 150 0.99\",\n",
-    "            metadata={\"fruit_id\": 1, \"fruit_name\": \"Apple\", \"organic\": 1},\n",
-    "        ),\n",
-    "    ]\n",
+    "    Document(\n",
+    "        page_content=\"Granny Smith 150 0.99\",\n",
+    "        metadata={\"fruit_id\": 1, \"fruit_name\": \"Apple\", \"organic\": 1},\n",
+    "    ),\n",
+    "]\n",
     "saver = MySQLDocumentSaver(engine=engine, table_name=table_name)\n",
     "saver.add_documents(test_docs)\n",
     "with engine.connect() as conn:\n",
