chore: minor refine

--- a/docs/document_loader.ipynb
+++ b/docs/document_loader.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Google Datebase Cloud SQL for MySQL\n",
+    "# Google Datebase Cloud SQL MySQL Langchain Document Loader\n",
     "\n",
     "[Google Database Cloud SQL for MySQL](https://cloud.google.com/sql/mysql).\n",
     "\n",
-    "Save, load and delete documents from `MySQL` database.\n",
+    "Save, load and delete langchain documents from `MySQL` database.\n",
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googleapis/langchain-google-cloud-sql-mysql-python/blob/main/docs/document_loader.ipynb)"
    ]
@@ -359,7 +359,7 @@
    "source": [
     "We can specify the content and metadata we want to load by setting the `content_columns` and `metadata_columns` when initializing the `MySQLLoader`.\n",
     "\n",
-    "For example here, the values of columns in `content_columns` will be joined together into a space-separated string, as `page_content` of loaded documents, and 'metadata' of loaded documents will only contain key-value pairs of columns specified in `metadata_columns`."
+    "For example here, the values of columns in `content_columns` will be joined together into a space-separated string, as `page_content` of loaded documents, and `metadata` of loaded documents will only contain key-value pairs of columns specified in `metadata_columns`."
    ]
   },
   {
