Mysql vector WIP

--- a/codelab.ipynb
+++ b/codelab.ipynb
@@ -26,7 +26,7 @@
     "import sqlalchemy as sa\n",
     "from src.langchain_google_cloud_sql_mysql import MySQLEngine, MySQLChatMessageHistory, MySQLLoader\n",
     "\n",
-    "CONNECTION_STRING = f'mysql+pymysql://hailong:Csql-admin-1234@35.193.214.98:3306/hailongvector'\n",
+    "CONNECTION_STRING = f'mysql+pymysql://user:passwd@host_ip:3306/vector_table'\n",
     "VECTOR_TABLE_NAME = 'lcvector'\n",
     "\n",
     "sa_engine = sa.create_engine(CONNECTION_STRING)\n",
